samples/_failures_safe/1761625438_759de1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2e2f0200.c: In function ‘main’:
./samples/SAFE/__tmp_2e2f0200.c:160:9: error: expected declaration or statement at end of input
  160 |         uint8_t* compressed_data = malloc(max_output_size);
      |         ^~~~~~~
./samples/SAFE/__tmp_2e2f0200.c:160:9: error: expected declaration or statement at end of input
